TODO
	* : Implement blur effect, maybe? 
	* : Implement interface to activate urgency hints

2024-01-19
	* config.c: Remove unused config tag_names
	* config.c: Add reloadConfig() to reload config file
	* action.c: Add reconfig option to process_ipc_action(). This will enable reloading of config file from simplewc-msg
	* input.c: Fix a bug where focus_client() is called with each process_cursor_motion() when sloppy_focus=true 
	* globals.h: change name from CURSOR_PASSTHROUGH to CURSOR_NORMAL
	* config.c: remove AUTOSTART as wl_list. Create autostart a reference to a script that will execute on launch
	* config/autostart.sh: create autostart script
	* main.c: Colorize the log output 
	* layer.c: give input to layer surface upon map. Give next client input focus upon destroy
	* input.c: Fix a bug causing seg fault when moving drag icon out of a client

2024-01-14
	* dwl-ipc-unstable-v2.xml: add send_action request to allow ipc client to send actions
	* ipc.c: implement send_action request call
	* util/simplewc-msg.c: Allow send_action request call through "--action" flag
	* action.c: add process_ipc_action() function
	* config.c: add LOCK function and lock_cmd entries
	* config/configrc: add lock_cmd entry
	* client.c: ensure the client border follows the surface size (when interactive mode)
	* client.c: Resize XWL client on request_configure event
	* server.c: remove focus on clients not on visible tags when calling arrange_output() (and also fix re-focus)
	* server.c: Implement wlr_gamma_control_manager_v1
	* client.c: Remove unused request_move/request_resize notifiers
	* client.c: Fix broken references when compiling without XWayland support

2024-01-10
	* main.c, Makefile: Change the name from SWC to SimpleWC
	* main.c: Move simple_config out of simple_server struct and make its own global struct

2024-01-09
	* globals.h: Adjust VISIBLEON() macro to remove client->visible flag
	* client.c: Make client cycling work even if all clients are hidden (not visible)